--- a/.classpath
+++ b/.classpath
@@ -5,7 +5,8 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="con" path="org.eclipse.fx.ide.jdt.core.JAVAFX_CONTAINER"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/IBM"/>
-	<classpathentry kind="lib" path="C:/Users/radu.vancea/Desktop/Downloads/mongo-java-driver-3.2.2.jar"/>
+	<classpathentry kind="lib" path="C:/Users/radu.vancea/Desktop/Downloads/mongo-java-driver-3.2.2.jar" sourcepath="C:/Users/radu.vancea/.m2/repository/org/mongodb/mongo-java-driver/3.2.2/mongo-java-driver-3.2.2-sources.jar"/>
 	<classpathentry kind="lib" path="C:/Users/radu.vancea/Desktop/Downloads/commons-io-2.5/commons-io-2.5.jar"/>
+	<classpathentry kind="lib" path="C:/Users/radu.vancea/Desktop/Downloads/org-apache-commons-lang.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
